<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:elevation="4dp"
        android:theme="@style/CustomActionBarOverlay" />

    <RelativeLayout
        android:id="@+id/details_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar" >

        <TextView
            android:id="@+id/service_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="18dp"
            android:hint="@string/service_record_name_hint"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/service_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/service_description"
            android:layout_marginLeft="18dp"
            android:hint="@string/service_record_date_hint"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/service_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/service_date"
            android:layout_marginLeft="18dp"
            android:hint="@string/service_record_address_hint"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/service_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/service_location"
            android:layout_marginLeft="18dp"
            android:hint="@string/service_record_cost_hint"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/details_layout"
        android:background="@drawable/divider" />

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_marginTop="18dp" />

</RelativeLayout>