<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:elevation="4dp"
        android:theme="@style/CustomActionBarOverlay" />

    <TextView
        android:id="@+id/ask_mechanic_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="18dp"
        android:text="@string/ask_mechanic_message"
        android:textSize="18sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/ask_mechanic_label"
        android:background="@drawable/divider" />

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/divider"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/top_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/divider"
            android:layout_marginLeft="24dp"
            android:src="@mipmap/ic_car_diagnosis_black_48dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/top_feature_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_toRightOf="@+id/top_icon"
                android:text="@string/ask_mechanic_diagnosis_label"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/top_feature_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/top_feature_label"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_toRightOf="@+id/top_icon"
                android:text="@string/ask_mechanic_diagnosis_message"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/top_layout"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/bottom_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="24dp"
            android:src="@mipmap/ic_repair_quote_black_48dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bottom_feature_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_toRightOf="@+id/mid_icon"
                android:text="@string/ask_mechanic_repair_label"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bottom_feature_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="32dp"
                android:layout_toRightOf="@+id/top_icon"
                android:text="@string/ask_mechanic_repair_message"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/action_call_mechanic"
        android:layout_width="@dimen/fab_button_diameter"
        android:layout_height="@dimen/fab_button_diameter"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/fab_button_margin_bottom"
        android:layout_marginRight="@dimen/fab_button_margin_right"
        android:background="@drawable/fab_shape"
        android:src="@drawable/ic_local_phone_white_24dp"
        android:tint="@android:color/white" />

</RelativeLayout>