<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.weel.mobile.activity.AddServiceRecordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:elevation="4dp"
        android:theme="@style/CustomActionBarOverlay" />

    <TextView android:id="@+id/description_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="18dp"
        android:text="@string/service_description" />

    <EditText
        android:id="@+id/description_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description_label" />

    <TextView
        android:id="@+id/instruct_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:layout_below="@+id/description_value"
        android:textSize="14sp"
        android:text="@string/service_description_message" />

    <ImageView
        android:id="@+id/preview_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instruct_message"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="88dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="18dp"
        android:layout_toLeftOf="@+id/cancel_button"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/action_save_profile"
        android:textColor="#29b473" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="88dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:layout_marginRight="8dp"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/action_cancel"
        android:textColor="#29b473" />

</RelativeLayout>