<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/top_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <RelativeLayout
            android:id="@+id/top_left_panel"
            android:layout_width="0dp"
            android:layout_height="186dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="#29b473">

            <ImageView
                android:id="@+id/ic_advice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/ic_mechanic_white_48dp" />

            <TextView
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ic_advice"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:text="@string/dashboard_advice_label"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/top_right_panel"
            android:layout_width="0dp"
            android:layout_height="186dp"
            android:layout_weight="1"
            android:background="#6196be">

            <ImageView
                android:id="@+id/ic_roadside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="52dp"
                android:src="@mipmap/ic_roadside_assistance_white_64dp" />

            <TextView
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ic_roadside"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="12dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:singleLine="false"
                android:lines="2"
                android:text="@string/dashboard_roadside_label"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <RelativeLayout
            android:id="@+id/bottom_left_panel"
            android:layout_width="0dp"
            android:layout_height="186dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="#fdbe3f">

            <ImageView
                android:id="@+id/ic_deals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="52dp"
                android:src="@mipmap/ic_weel_deals_white_48dp" />

            <TextView
                android:layout_width="62dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="8dp"
                android:layout_below="@+id/ic_deals"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:text="@string/dashboard_deals_label"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bottom_right_panel"
            android:layout_width="0dp"
            android:layout_height="186dp"
            android:layout_weight="1"
            android:background="#fd6e26">

            <ImageView
                android:id="@+id/ic_maint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="52dp"
                android:src="@mipmap/ic_maintenance_schedule_white_48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ic_maint"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:text="@string/dashboard_maintenance_label"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>